syntax="proto2";

package yamcs.protobuf.sdls;

option java_package = "org.yamcs.protobuf";
option java_outer_classname = "SdlsProto";
option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "yamcs/api/annotations.proto";
import "yamcs/api/httpbody.proto";

service SdlsApi {
  // Get the sequence number
  rpc GetSeqCtr(GetSeqCtrRequest) returns (GetSeqCtrResponse) {
    option (yamcs.api.route) = {
      get: "/api/sdls/{instance}/{linkName}/{spi}/seq"
    };
  }

  // Reset the sequence counter
  rpc ResetSeqCtr(ResetSeqCtrRequest) returns (google.protobuf.Empty) {
    option (yamcs.api.route) = {
      delete: "/api/sdls/{instance}/{linkName}/{spi}/seq"
    };
  }

  // Set the key
  rpc SetKey(SetKeyRequest) returns (google.protobuf.Empty) {
    option (yamcs.api.route) = {
      put: "/api/sdls/{instance}/{linkName}/{spi}/key",
      body: "data",
    };
  }

  // Get SDLS statistics for the instance
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse) {
    option (yamcs.api.route) = {
      get: "/api/sdls/{instance}/stats"
    };
  }
}

message GetSeqCtrRequest {
  required string instance = 1;
  required string linkName = 2;
  required uint32 spi = 3;
}

message GetSeqCtrResponse {
  required uint64 seq = 1;
}

message ResetSeqCtrRequest {
  required string instance = 1;
  required string linkName = 2;
  required uint32 spi = 3;
}

message SetKeyRequest {
  required string instance = 1;
  required string linkName = 2;
  required uint32 spi = 3;
  required yamcs.api.HttpBody data = 4;
}

message GetStatsRequest {
  required string instance = 1;
}

message GetStatsResponse {
  repeated SdlsStats stats = 1;
}

message SdlsStats {
  required string instance = 1;
  required string linkName = 2;
  required uint32 spi = 3;
  required uint64 seqCtr = 4;
}